# lagoon

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.anymesh  Dockerfile.yggdrasil  Dockerfile.yggstack  LICENSE  README.md  bridge-listen.py  docker-compose-cluster.yml  docker-compose.yml  docker-entrypoint.sh  fly.toml  yggdrasil-entrypoint.sh  yggstack-entrypoint.sh
crates/anymesh/: Cargo.toml
crates/anymesh/deploy/: Dockerfile  fly.toml
crates/anymesh/src/: error.rs  handoff.rs  lib.rs  mesh.rs  repair.rs  sockaddr.rs  transport.rs
crates/ferrouswood/: Cargo.toml
crates/ferrouswood/src/: lib.rs  router.rs
crates/lagoon-server/: Cargo.toml
crates/lagoon-server/src/: main.rs
crates/lagoon-server/src/irc/: bot.rs  cluster_chain.rs  codec.rs  community.rs  connection_gossip.rs  connection_store.rs  cvdf_transport.rs  federation.rs  gossip.rs  invite.rs  latency_gossip.rs  lens.rs  liveness_gossip.rs  liveness_store.rs  message.rs  metrics.rs  mod.rs  modes.rs  peer_addr_gossip.rs  peer_addr_store.rs  polp.rs  profile.rs  proof_store.rs  server.rs  spiral.rs  switchboard.rs  transport.rs  vdf.rs  wire.rs  yggdrasil.rs
crates/lagoon-server/tests/: federation.rs  mesh.rs
crates/lagoon-vdf/: Cargo.toml
crates/lagoon-vdf/src/: lib.rs
crates/lagoon-web/: Cargo.toml
crates/lagoon-web/src/: auth.rs  bridge.rs  communities.rs  debug.rs  invites.rs  lib.rs  main.rs  mesh.rs  state.rs  tls.rs  topology.rs
crates/lagoon-web/web/: package-lock.json  package.json  vite.config.js
crates/lagoon-web/web/src/: App.vue
crates/lagoon-web/web/src/components/: CircleModal.vue  CommunityModal.vue  CommunitySidebar.vue  IrcClient.vue  Login.vue  NetworkTopology.vue
crates/lagoon-web/web/src/composables/: useCommunities.js  useConnection.js
crates/netprobe/: Cargo.toml  Dockerfile
crates/netprobe/src/: main.rs
crates/yggbridge/: Cargo.toml  build.rs
crates/yggbridge/go/: go.mod  go.sum  yggbridge.go
crates/yggbridge/src/: ffi.rs  lib.rs
crates/yggbridge/tests/: ygg.rs
crates/yggdrasil-rs/: Cargo.toml
crates/yggdrasil-rs/src/: crypto.rs  error.rs  lib.rs  meta.rs  node.rs  peer.rs  wire.rs
crates/yggdrasil-rs/tests/: compat.rs
deploy/: deploy-gateway.yml  deploy-haproxy.yml  deploy-lagoon-all.yml  deploy-lagoon-swarm.yml  deploy-lagoon.yml
deploy/files/: haproxy.cfg  lagoon-gateway.service  lagoon-web.service  lagoon.service
deploy/files/web-dist/: index.html
deploy/files/web-dist/assets/: 3d-force-graph-BZtKzHLJ.js  float-tooltip-CvuDA59Z.js  force-graph-B0RjWa0U.js  index-BBYfLCaO.js  index-B_1Uj__8.js  index-Bi3IyWPx.css  index-C7Es_s3V.js  index-CRlPu5Tj.js  index-CT_Qbm26.js  index-CWwPlJVA.js  index-CdGfYY0f.css  index-De8xUtkW.css  index-LNWxEgE7.css  index-__3eniVX.css  index-sKKsPko1.css  three.module-D4rWNcz2.js
deploy/inventory/group_vars/: lagoon-gateway.yml  lagoon-servers.yml  lagoon-swarm.yml
deploy/inventory/groups/: lagoon-gateway.yml  lagoon-servers.yml  lagoon-swarm.yml  lagoon.yml
deploy/inventory/host_vars/: bee.yml  beetroot.yml  cardinal.yml  cubert.yml  frond.yml  geraldine.yml  green.yml  jester.yml  leeroy.yml  lon.yml  mrow.yml  puppycat.yml  pyrus.yml  sanctuary.yml  tealc.yml  toast.yml
deploy/regions/: ap.env  eu.env  us.env
docs/: FUNGIBLE_VDF.md  FUNGIBLE_VDF_PAPER.md  Verifiable-Inverse-Delay-Functions.md  verify_claims.py
infra/: docker-compose.yml  entrypoint.sh
proofs/: LagoonMesh.lean  lake-manifest.json  lakefile.lean
proofs/LagoonMesh/: BootstrapProofs.lean  Causality.lean  ChainHistory.lean  Clumps.lean  ClusterChain.lean  ConnectionProofs.lean  Defederation.lean  HacksAudit.lean  Invariants.lean  LivenessProofs.lean  MergeProofs.lean  Messages.lean  Network.lean  NodeLifecycle.lean  PeerAddrGossip.lean  PerformanceBounds.lean  Scenarios.lean  SimScenarios.lean  SlotPaths.lean  Spiral.lean  SpiralProofs.lean  State.lean  Supernode.lean  TransitionProofs.lean  Transitions.lean  Types.lean
src/: main.rs
src/irc/: bot.rs  federation.rs  mod.rs  server.rs
tests/: federation.rs
