[workspace]
resolver = "3"
members = [
    "crates/lagoon-server",
    "crates/lagoon-web",
    "crates/lagoon-vdf",
    "crates/anymesh",

    "crates/yggdrasil-rs",
    "crates/ferrouswood",
]
exclude = [
    "crates/netprobe",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Riff Labs <hello@riff.cc>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/riffcc/lagoon"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Auth
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
blake2 = "0.10"
blake3 = "1"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
sysinfo = "0.33"

# Error handling
thiserror = "2"

# Data
bytes = "1"
hostname = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# TLS
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
webpki-roots = "0.26"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }

# Citadel
citadel-topology = { path = "/mnt/riffcastle/lagun-project/citadel/crates/citadel-topology", features = ["serde"] }
citadel-gossip = { path = "/mnt/riffcastle/lagun-project/citadel/crates/citadel-gossip" }
citadel-spore = { path = "/mnt/riffcastle/lagun-project/citadel/crates/citadel-spore" }
citadel-crdt = { path = "/mnt/riffcastle/lagun-project/citadel/crates/citadel-crdt" }
citadel-lens = { path = "/mnt/riffcastle/lagun-project/citadel/crates/citadel-lens", default-features = false }
bincode = "1.3"
serde_bytes = "0.11"

# VDF
lagoon-vdf = { path = "crates/lagoon-vdf" }

# Networking
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"

# Anymesh
anymesh = { path = "crates/anymesh" }

# Yggdrasil
yggdrasil-rs = { path = "crates/yggdrasil-rs" }
ferrouswood = { path = "crates/ferrouswood" }

# Dev
pretty_assertions = "1"
