[package]
name = "lagoon-server"
version = "0.1.0"
edition = "2024"
authors = ["Riff Labs <hello@riff.cc>"]
description = "Lagoon IRC server — the heart of Lagun's decentralized chat."
license = "AGPL-3.0-or-later"
repository = "https://github.com/riffcc/lagoon"

[[bin]]
name = "lagoon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
citadel-topology = { workspace = true }
citadel-gossip = { workspace = true }
citadel-spore = { workspace = true }
citadel-crdt = { workspace = true }
citadel-lens = { workspace = true }
bincode = { workspace = true }
serde_bytes = { workspace = true }
lagoon-vdf = { workspace = true }
socket2 = { workspace = true }
base64 = { workspace = true }
anymesh = { workspace = true }
yggdrasil-rs = { path = "../yggdrasil-rs" }

[dev-dependencies]
pretty_assertions = { workspace = true }
