[package]
name = "yggbridge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "rt", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.9"

[build-dependencies]
